support hytrix/ refactory canary/ delete redundancy code

--- a/spring-cloud-huawei-canary-core/pom.xml
+++ b/spring-cloud-huawei-canary-core/pom.xml
@@ -9,8 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spring-cloud-huawei-canary-client</artifactId>
+    <artifactId>spring-cloud-huawei-canary-core</artifactId>
 
+    <properties>
+        <guava.version>27.0.1-jre</guava.version>
+        <snakeyaml.version>1.24</snakeyaml.version>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -54,27 +58,12 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>27.0.1-jre</version>
+            <version>${guava.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-huawei-servicecomb-discovery</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-huawei-canary-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.github.openfeign</groupId>
-            <artifactId>feign-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-openfeign-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.netflix.hystrix</groupId>
-            <artifactId>hystrix-core</artifactId>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>${snakeyaml.version}</version>
         </dependency>
     </dependencies>
 </project>
