--- a/spring-cloud-huawei-sample/dtm-demo/reserve-feign/Dockerfile
+++ b/spring-cloud-huawei-sample/dtm-demo/reserve-feign/Dockerfile
@@ -4,7 +4,7 @@ ENV LOG_ROOT=/var/log/reserve-feign/
 RUN mkdir -p $APP_ROOT
 RUN mkdir -p $LOG_ROOT
 
-COPY target/reserve-feign-0.0.1-SNAPSHOT/reserve-feign-0.0.1-SNAPSHOT $APP_ROOT
+COPY target/reserve-feign-0.0.1/reserve-feign-0.0.1 $APP_ROOT
 
 
 RUN cd $APP_ROOT && chmod -R 770 .
