--- a/spring-cloud-huawei-sample/canary-demo/canary-provider/pom.xml
+++ b/spring-cloud-huawei-sample/canary-demo/canary-provider/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <artifactId>canary-demo</artifactId>
         <groupId>org.springframework.cloud</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+      <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>canary-provider</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1</version>
     <properties>
         <java.version>1.8</java.version>
     </properties>
