--- a/spring-cloud-huawei-sample/config-demo/pom.xml
+++ b/spring-cloud-huawei-sample/config-demo/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.springframework.cloud</groupId>
   <artifactId>config-demo</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1</version>
   <properties>
     <java.version>1.8</java.version>
     <spring-cloud.version>2.1.2.RELEASE</spring-cloud.version>
