--- a/spring-cloud-huawei-sample/discovery-demo/price-provider/pom.xml
+++ b/spring-cloud-huawei-sample/discovery-demo/price-provider/pom.xml
@@ -21,12 +21,12 @@
   <parent>
     <artifactId>discovery-demo</artifactId>
     <groupId>org.springframework.cloud</groupId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>price-provider</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1</version>
   <properties>
     <java.version>1.8</java.version>
   </properties>
