--- a/spring-cloud-huawei-sample/dtm-demo/pom.xml
+++ b/spring-cloud-huawei-sample/dtm-demo/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.springframework.cloud</groupId>
   <artifactId>dtm-demo</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1</version>
   <packaging>pom</packaging>
   <modules>
     <module>reserve</module>
