--- a/spring-cloud-huawei-servicecomb-discovery/pom.xml
+++ b/spring-cloud-huawei-servicecomb-discovery/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <artifactId>spring-cloud-huawei</artifactId>
     <groupId>org.springframework.cloud</groupId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
   </parent>
 
   <groupId>org.springframework.cloud</groupId>
