--- a/spring-cloud-starter-huawei/spring-cloud-starter-huawei-config/pom.xml
+++ b/spring-cloud-starter-huawei/spring-cloud-starter-huawei-config/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>spring-cloud-starter-huawei</artifactId>
     <groupId>org.springframework.cloud</groupId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -15,7 +15,7 @@
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-huawei-config</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
+      <version>0.0.1</version>
     </dependency>
   </dependencies>
 </project>
