--- a/spring-cloud-huawei-canary-core/pom.xml
+++ b/spring-cloud-huawei-canary-core/pom.xml
@@ -81,5 +81,9 @@
             <artifactId>snakeyaml</artifactId>
             <version>${snakeyaml.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-huawei-common</artifactId>
+        </dependency>
     </dependencies>
 </project>
