--- a/spring-cloud-huawei-sample/canary-demo/canary-consumer/pom.xml
+++ b/spring-cloud-huawei-sample/canary-demo/canary-consumer/pom.xml
@@ -37,5 +37,9 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-huawei-canary</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-huawei-config</artifactId>
+        </dependency>
     </dependencies>
 </project>
