--- a/spring-cloud-huawei-sample/canary-demo/canary-provider-beta/src/main/resources/application.yaml
+++ b/spring-cloud-huawei-sample/canary-demo/canary-provider-beta/src/main/resources/application.yaml
@@ -8,7 +8,12 @@ spring:
     servicecomb:
       discovery:
         enabled: true
-        address: http://127.0.0.1:30100
+        address: https://cse.cn-north-4.myhuaweicloud.com:443
         version: 0.0.2
         healthCheckInterval: 30
-        autoDiscovery: true
+      credentials:
+        enable: true
+        accessKey: yourak
+        secretKey: yoursk
+        project: cn-north-4
+        akskCustomCipher: default
