--- a/spring-cloud-huawei-sample/discovery-demo/price-provider/src/main/resources/application.yaml
+++ b/spring-cloud-huawei-sample/discovery-demo/price-provider/src/main/resources/application.yaml
@@ -8,7 +8,7 @@ spring:
     servicecomb:
       discovery:
         enabled: true
-        address: https://cse.cn-east-2.myhuaweicloud.com
+        address: http://127.0.0.1:30300,https://cse.cn-east-2.myhuaweicloud.com
         serviceName: price
         version: 0.0.1
         healthCheckInterval: 30
