--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
     <module>spring-cloud-huawei-config</module>
     <module>spring-cloud-huawei-router-core</module>
     <module>spring-cloud-huawei-router-client</module>
+    <module>export-maven</module>
   </modules>
 
 
