--- a/spring-cloud-huawei-sample/canary-demo/canary-provider-beta/pom.xml
+++ b/spring-cloud-huawei-sample/canary-demo/canary-provider-beta/pom.xml
@@ -43,4 +43,27 @@
             <artifactId>spring-cloud-starter-huawei-router</artifactId>
         </dependency>
     </dependencies>
+
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>./lib/</classpathPrefix>
+                            <mainClass>org.springframework.cloud.servicecomb.sample.Application</mainClass>
+                        </manifest>
+                        <manifestEntries>
+                            <Class-Path>.</Class-Path>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
