--- a/spring-cloud-huawei-sample/canary-demo/pom.xml
+++ b/spring-cloud-huawei-sample/canary-demo/pom.xml
@@ -3,8 +3,8 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
+    <groupId>com.huaweicloud</groupId>
     <artifactId>spring-cloud-huawei-sample</artifactId>
-    <groupId>org.springframework.cloud</groupId>
     <version>0.0.1</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -31,7 +31,7 @@
         <scope>import</scope>
       </dependency>
       <dependency>
-        <groupId>org.springframework.cloud</groupId>
+        <groupId>com.huaweicloud</groupId>
         <artifactId>spring-cloud-huawei-dependencies</artifactId>
         <version>${project.version}</version>
         <type>pom</type>
