--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <artifactId>spring-cloud-build</artifactId>
     <version>2.1.6.RELEASE</version>
   </parent>
-  <groupId>org.springframework.cloud</groupId>
+  <groupId>com.huaweicloud</groupId>
   <artifactId>spring-cloud-huawei</artifactId>
   <version>0.0.1</version>
   <packaging>pom</packaging>
