--- a/spring-cloud-huawei-sample/canary-demo/canary-provider/pom.xml
+++ b/spring-cloud-huawei-sample/canary-demo/canary-provider/pom.xml
@@ -35,11 +35,11 @@
       <version>2.1.2.RELEASE</version>
     </dependency>
     <dependency>
-      <groupId>org.springframework.cloud</groupId>
+      <groupId>com.huaweicloud</groupId>
       <artifactId>spring-cloud-starter-huawei-servicecomb-discovery</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.springframework.cloud</groupId>
+      <groupId>com.huaweicloud</groupId>
       <artifactId>spring-cloud-starter-huawei-router</artifactId>
     </dependency>
   </dependencies>
