--- a/spring-cloud-huawei-sample/dtm-demo/ticket/pom.xml
+++ b/spring-cloud-huawei-sample/dtm-demo/ticket/pom.xml
@@ -3,8 +3,8 @@
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
+    <groupId>com.huaweicloud</groupId>
     <artifactId>dtm-demo</artifactId>
-    <groupId>org.springframework.cloud</groupId>
     <version>0.0.1</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -36,11 +36,11 @@
       <artifactId>spring-cloud-commons</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.springframework.cloud</groupId>
+      <groupId>com.huaweicloud</groupId>
       <artifactId>spring-cloud-starter-huawei-servicecomb-discovery</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.springframework.cloud</groupId>
+      <groupId>com.huaweicloud</groupId>
       <artifactId>spring-cloud-starter-huawei-dtm</artifactId>
     </dependency>
     <dependency>
