--- a/spring-cloud-huawei-sample/pom.xml
+++ b/spring-cloud-huawei-sample/pom.xml
@@ -8,7 +8,7 @@
     <version>2.1.6.RELEASE</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.springframework.cloud</groupId>
+  <groupId>com.huaweicloud</groupId>
   <artifactId>spring-cloud-huawei-sample</artifactId>
   <version>0.0.1</version>
   <packaging>pom</packaging>
