--- a/spring-cloud-starter-huawei/spring-cloud-starter-huawei-router/pom.xml
+++ b/spring-cloud-starter-huawei/spring-cloud-starter-huawei-router/pom.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>spring-cloud-starter-huawei</artifactId>
-        <groupId>org.springframework.cloud</groupId>
-      <version>0.0.1</version>
-    </parent>
-    <modelVersion>4.0.0</modelVersion>
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <parent>
+    <groupId>com.huaweicloud</groupId>
+    <artifactId>spring-cloud-starter-huawei</artifactId>
+    <version>0.0.1</version>
+  </parent>
+  <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spring-cloud-starter-huawei-router</artifactId>
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-huawei-router-client</artifactId>
-        </dependency>
-    </dependencies>
+  <artifactId>spring-cloud-starter-huawei-router</artifactId>
+  <dependencies>
+    <dependency>
+      <groupId>com.huaweicloud</groupId>
+      <artifactId>spring-cloud-huawei-router-client</artifactId>
+    </dependency>
+  </dependencies>
 
 </project>
