修改POM依赖关系

--- a/spring-cloud-huawei-sample/canary-demo/canary-provider/pom.xml
+++ b/spring-cloud-huawei-sample/canary-demo/canary-provider/pom.xml
@@ -4,7 +4,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <artifactId>canary-demo</artifactId>
-    <groupId>org.springframework.cloud</groupId>
+    <groupId>com.huaweicloud</groupId>
     <version>0.0.1</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
