--- a/spring-cloud-huawei-parents/pom.xml
+++ b/spring-cloud-huawei-parents/pom.xml
@@ -4,31 +4,22 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <groupId>com.huaweicloud</groupId>
-    <artifactId>spring-cloud-huawei</artifactId>
+    <artifactId>spring-cloud-huawei-dependencies</artifactId>
     <version>0.0.1</version>
+    <relativePath>../spring-cloud-huawei-dependencies</relativePath>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>spring-cloud-huawei-dependencies</artifactId>
+  <artifactId>spring-cloud-huawei-parents</artifactId>
   <packaging>pom</packaging>
   <version>0.0.1</version>
   <name>Spring Cloud Huawei Dependencies</name>
   <properties>
-    <spring-cloud.version>2.1.2.RELEASE</spring-cloud.version>
-    <spring-boot.version>2.1.6.RELEASE</spring-boot.version>
-    <httpclient.version>4.5.9</httpclient.version>
-    <jackson-databind.version>2.9.10</jackson-databind.version>
-    <jmockit.version>1.36</jmockit.version>
-    <junit.version>4.12</junit.version>
-    <cse-dependency.version>2.5.0</cse-dependency.version>
-    <spring.version>5.1.8.RELEASE</spring.version>
   </properties>
 
   <dependencyManagement>
     <dependencies>
-
-      <!-- this project -->
       <dependency>
         <groupId>com.huaweicloud</groupId>
         <artifactId>spring-cloud-huawei-servicecomb-discovery</artifactId>
@@ -78,56 +69,6 @@
         <groupId>com.huaweicloud</groupId>
         <artifactId>spring-cloud-starter-huawei-router</artifactId>
         <version>${project.version}</version>
-      </dependency>
-
-      <!-- 3rd parties -->
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-dependencies</artifactId>
-        <version>${spring-boot.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-commons-dependencies</artifactId>
-        <version>${spring-cloud.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-netflix-dependencies</artifactId>
-        <version>${spring-cloud.version}</version>
-        <scope>import</scope>
-        <type>pom</type>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-openfeign-dependencies</artifactId>
-        <version>${spring-cloud.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-      <dependency>
-        <groupId>com.huawei.paas.cse</groupId>
-        <artifactId>foundation-auth</artifactId>
-        <version>${cse-dependency.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-web</artifactId>
-        <version>${spring.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-webmvc</artifactId>
-        <version>${spring.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.jmockit</groupId>
-        <artifactId>jmockit</artifactId>
-        <version>${jmockit.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
