try to delete parent , it repeats with dependencies

--- a/spring-cloud-huawei-dtm/pom.xml
+++ b/spring-cloud-huawei-dtm/pom.xml
@@ -20,9 +20,9 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <groupId>com.huaweicloud</groupId>
-    <artifactId>spring-cloud-huawei-parents</artifactId>
+    <artifactId>spring-cloud-huawei</artifactId>
     <version>0.0.1</version>
-    <relativePath>../spring-cloud-huawei-parents</relativePath>
+    <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
