--- a/spring-cloud-huawei-servicecomb-discovery/pom.xml
+++ b/spring-cloud-huawei-servicecomb-discovery/pom.xml
@@ -21,9 +21,9 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.huaweicloud</groupId>
-    <artifactId>spring-cloud-huawei-parents</artifactId>
+    <artifactId>spring-cloud-huawei</artifactId>
     <version>0.0.1</version>
-    <relativePath>../spring-cloud-huawei-parents</relativePath>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
   <artifactId>spring-cloud-huawei-servicecomb-discovery</artifactId>
