--- a/spring-cloud-huawei-sample/canary-demo/canary-provider-beta/src/main/resources/application.yaml
+++ b/spring-cloud-huawei-sample/canary-demo/canary-provider-beta/src/main/resources/application.yaml
@@ -8,12 +8,12 @@ spring:
     servicecomb:
       discovery:
         enabled: true
-        address: https://cse.cn-north-4.myhuaweicloud.com:443
+        address: ${engineAdd:https://cse.cn-north-4.myhuaweicloud.com}
         version: 0.0.2
         healthCheckInterval: 30
       credentials:
-        enable: true
-        accessKey: yourak
-        secretKey: yoursk
-        project: cn-north-4
+        enable: ${sslEnabled:true}
+        accessKey: ${ak:yourak}
+        secretKey: ${sk:yoursk}
+        project: ${region:cn-north-4}
         akskCustomCipher: default
