--- a/spring-cloud-huawei-sample/dtm-demo/pom.xml
+++ b/spring-cloud-huawei-sample/dtm-demo/pom.xml
@@ -2,11 +2,16 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <parent>
+    <artifactId>spring-cloud-huawei-sample</artifactId>
+    <groupId>com.huaweicloud</groupId>
+    <version>0.0.4</version>
+  </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.huaweicloud</groupId>
   <artifactId>dtm-demo</artifactId>
-  <version>0.0.1</version>
   <packaging>pom</packaging>
+
   <modules>
     <module>reserve</module>
     <module>ticket</module>
