--- a/export-maven/pom.xml
+++ b/export-maven/pom.xml
@@ -6,14 +6,14 @@
 
   <groupId>com.huaweicloud</groupId>
   <artifactId>export-maven</artifactId>
-  <version>0.0.1</version>
+  <version>0.0.2</version>
 
   <dependencyManagement>
     <dependencies>
       <dependency>
         <groupId>com.huaweicloud</groupId>
         <artifactId>spring-cloud-huawei-dependencies</artifactId>
-        <version>0.0.1</version>
+        <version>0.0.2</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -24,6 +24,18 @@
     <dependency>
       <groupId>com.huaweicloud</groupId>
       <artifactId>spring-cloud-huawei</artifactId>
+      <type>pom</type>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.huaweicloud</groupId>
+      <artifactId>spring-cloud-huawei-parents</artifactId>
+      <type>pom</type>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.huaweicloud</groupId>
+      <artifactId>spring-cloud-starter-huawei</artifactId>
       <type>pom</type>
       <version>${project.version}</version>
     </dependency>
