add gateway demo

--- a/spring-cloud-huawei-sample/pom.xml
+++ b/spring-cloud-huawei-sample/pom.xml
@@ -17,5 +17,6 @@
     <module>discovery-demo</module>
     <module>config-demo</module>
     <module>canary-demo</module>
+    <module>gateway-demo</module>
   </modules>
 </project>
