--- a/spring-cloud-huawei-sample/gateway-demo/pom.xml
+++ b/spring-cloud-huawei-sample/gateway-demo/pom.xml
@@ -2,8 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <groupId>com.huaweicloud</groupId>
-  <version>0.0.3</version>
+  <parent>
+    <artifactId>spring-cloud-huawei-sample</artifactId>
+    <groupId>com.huaweicloud</groupId>
+    <version>0.0.3</version>
+  </parent>
   <packaging>pom</packaging>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>gateway-demo</artifactId>
