--- a/spring-cloud-huawei-sample/discovery-demo/pom.xml
+++ b/spring-cloud-huawei-sample/discovery-demo/pom.xml
@@ -2,10 +2,13 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <parent>
+    <artifactId>spring-cloud-huawei-sample</artifactId>
+    <groupId>com.huaweicloud</groupId>
+    <version>0.0.3</version>
+  </parent>
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.huaweicloud</groupId>
   <artifactId>discovery-demo</artifactId>
-  <version>0.0.3</version>
   <packaging>pom</packaging>
   <modules>
     <module>price-provider</module>
