--- a/spring-cloud-starter-huawei/pom.xml
+++ b/spring-cloud-starter-huawei/pom.xml
@@ -16,6 +16,7 @@
     <module>spring-cloud-starter-huawei-dtm</module>
     <module>spring-cloud-starter-huawei-router</module>
     <module>spring-cloud-starter-huawei-config</module>
+    <module>spring-cloud-starter-huawei-swagger</module>
   </modules>
 
 </project>
