--- a/spring-cloud-huawei-sample/canary-demo/canary-consumer/src/main/resources/application.yaml
+++ b/spring-cloud-huawei-sample/canary-demo/canary-consumer/src/main/resources/application.yaml
@@ -8,16 +8,10 @@ spring:
     servicecomb:
       discovery:
         enabled: true
-        address: ${engineAdd:https://cse.cn-north-4.myhuaweicloud.com}
+        address: https://cse.cn-north-4.myhuaweicloud.com
         version: 0.0.2
         healthCheckInterval: 30
-#        autoDiscovery: true
-      credentials:
-        enable: ${sslEnabled:true}
-        accessKey: ${ak:yourak}
-        secretKey: ${sk:yoursk}
-        project: ${region:cn-north-4}
-        akskCustomCipher: default
+        autoDiscovery: true
 
 servicecomb:
   routeRule:
