add edge-service demo / add case to swagger / fix string bug

--- a/spring-cloud-huawei-sample/gateway-demo/backend-service/pom.xml
+++ b/spring-cloud-huawei-sample/gateway-demo/backend-service/pom.xml
@@ -33,6 +33,10 @@
       <groupId>com.huaweicloud</groupId>
       <artifactId>spring-cloud-starter-huawei-servicecomb-discovery</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.huaweicloud</groupId>
+      <artifactId>spring-cloud-starter-huawei-swagger</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
