--- a/spring-cloud-huawei-sample/swagger-demo/pom.xml
+++ b/spring-cloud-huawei-sample/swagger-demo/pom.xml
@@ -14,6 +14,7 @@
   <modules>
     <module>springcloud-provider</module>
     <module>javachassis-consumer</module>
+    <module>edge-service</module>
   </modules>
   <properties>
     <java.version>1.8</java.version>
