[issue #96]interworking with Java-chassis by swagger(#95)
* interworking with Java-chassis

* add Licence

* modify config name

* add edge-service demo / add case to swagger / fix string bug

* move edge-service demo to swagger-demo

--- a/spring-cloud-huawei-sample/swagger-demo/javachassis-consumer/src/main/resources/microservice.yaml
+++ b/spring-cloud-huawei-sample/swagger-demo/javachassis-consumer/src/main/resources/microservice.yaml
@@ -1,8 +1,8 @@
 APPLICATION_ID: swagger
 service_description:
   name: swagger-consumer
-  version: 0.0.3
-  environment: production
+  version: 0.0.1
+  environment: development
 cse:
   service:
     registry:
