--- a/spring-cloud-huawei-sample/gateway-demo/pom.xml
+++ b/spring-cloud-huawei-sample/gateway-demo/pom.xml
@@ -12,8 +12,8 @@
   <artifactId>gateway-demo</artifactId>
   <modules>
     <module>backend-service</module>
-    <module>gateway-service</module>
-    <module>zuul-service</module>
+    <module>gateway</module>
+    <module>zuul</module>
   </modules>
 
   <properties>
