--- a/spring-cloud-huawei-sample/canary-demo/canary-consumer/src/main/resources/bootstrap.yml
+++ b/spring-cloud-huawei-sample/canary-demo/canary-consumer/src/main/resources/bootstrap.yml
@@ -4,7 +4,7 @@ spring:
   cloud:
     servicecomb:
       config:
-        serverAddr: https://cse.cn-north-4.myhuaweicloud.com
+        serverAddr:  http://127.0.0.1:30113
         watch:
           delay: 10000
       credentials:
