fix edge-service demo pom bug

--- a/spring-cloud-huawei-sample/swagger-demo/edge-service/pom.xml
+++ b/spring-cloud-huawei-sample/swagger-demo/edge-service/pom.xml
@@ -3,7 +3,7 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>gateway-demo</artifactId>
+    <artifactId>swagger-demo</artifactId>
     <groupId>com.huaweicloud</groupId>
     <version>0.0.3</version>
   </parent>
