modify config name from credentials.enable to credentials.enabled

--- a/spring-cloud-huawei-sample/config-demo/src/main/resources/bootstrap.yml
+++ b/spring-cloud-huawei-sample/config-demo/src/main/resources/bootstrap.yml
@@ -10,7 +10,7 @@ spring:
         watch:
           delay: 10000
       credentials:
-        enable: true
+        enabled: true
         accessKey: your ak
         secretKey: your sk
         akskCustomCipher: default
