--- a/spring-cloud-huawei-sample/canary-demo/canary-consumer/src/main/resources/bootstrap.yml
+++ b/spring-cloud-huawei-sample/canary-demo/canary-consumer/src/main/resources/bootstrap.yml
@@ -8,7 +8,7 @@ spring:
         watch:
           delay: 10000
       credentials:
-        enable: true
+        enabled: true
         accessKey: ak
         secretKey: sk
         project: cn-north-4
