--- a/spring-cloud-huawei-sample/canary-demo/canary-provider/src/main/resources/application.yaml
+++ b/spring-cloud-huawei-sample/canary-demo/canary-provider/src/main/resources/application.yaml
@@ -12,7 +12,7 @@ spring:
         version: 0.0.1
         healthCheckInterval: 30
       credentials:
-        enable: true
+        enabled: true
         accessKey: ak
         secretKey: sk
         project: cn-north-4
