--- a/spring-cloud-huawei-sample/discovery-demo/order-consumer/src/main/resources/application.yaml
+++ b/spring-cloud-huawei-sample/discovery-demo/order-consumer/src/main/resources/application.yaml
@@ -15,7 +15,7 @@ spring:
         version: 0.0.1
 
       credentials:
-        enable: true
+        enabled: true
         accessKey: your ak
         secretKey: your sk
         akskCustomCipher: default
