--- a/spring-cloud-huawei-sample/canary-demo/canary-provider-beta/pom.xml
+++ b/spring-cloud-huawei-sample/canary-demo/canary-provider-beta/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.huaweicloud</groupId>
     <artifactId>canary-demo</artifactId>
-    <version>0.0.3</version>
+    <version>0.1.0RC2</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
