--- a/spring-cloud-huawei-sample/config-demo/pom.xml
+++ b/spring-cloud-huawei-sample/config-demo/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>spring-cloud-huawei-sample</artifactId>
     <groupId>com.huaweicloud</groupId>
-    <version>0.0.3</version>
+    <version>0.1.0RC2</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.huaweicloud</groupId>
