--- a/spring-cloud-huawei-sample/dtm-demo/coupon/Dockerfile
+++ b/spring-cloud-huawei-sample/dtm-demo/coupon/Dockerfile
@@ -4,7 +4,7 @@ ENV LOG_ROOT=/var/log/coupon/
 RUN mkdir -p $APP_ROOT
 RUN mkdir -p $LOG_ROOT
 
-COPY target/coupon-0.0.3/coupon-0.0.3 $APP_ROOT
+COPY target/coupon-0.1.0RC2/coupon-0.1.0RC2 $APP_ROOT
 
 
 RUN cd $APP_ROOT && chmod -R 770 .
