--- a/spring-cloud-huawei-sample/swagger-demo/springcloud-provider/pom.xml
+++ b/spring-cloud-huawei-sample/swagger-demo/springcloud-provider/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>swagger-demo</artifactId>
     <groupId>com.huaweicloud</groupId>
-    <version>0.0.3</version>
+    <version>0.1.0RC2</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
